[package]
name = "bollywood"
version = "0.1.0"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
description = "Simple actor system"
readme = "README.md"
documentation = "https://docs.rs/bollywood/"
repository = "https://github.com/naomijub/bollywood"
keywords = ["Actors"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features = ["full"]}
serde = "*"